<resources>
    <string name="app_name">Group9_InClass08</string>
    <string name="contacts_title">Contacts</string>
    <string name="add">Add Contact</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="new_contact">New Contact</string>
    <string name="cid">Cid</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_type">PhoneType</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>